Made some changes

--- a/MainPageStudentViewStyle.css
+++ b/MainPageStudentViewStyle.css
@@ -14,7 +14,7 @@ table{
     width: 100%;
 }
 
-.assesmentView, .dashboard{
+.assessmentView, .dashboard{
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 20px;
 }
