--- a/StatsViewStyle.css
+++ b/StatsViewStyle.css
@@ -7,7 +7,8 @@ html{
 
 header{
     background-color: aliceblue;
-    width: 15%;
+    width: 220px;
+    border-radius: 10px;
 
 }
 
@@ -16,6 +17,7 @@ th, td{
     text-align: center;
     vertical-align: center;
     /*border-collapse: collapse;*/
+    border-radius: 8px;
 }
 
 th{
