--- a/customCSS/index.css
+++ b/customCSS/index.css
@@ -25,7 +25,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding:0 20px;
+    padding:0px;
   }
 
   .bg-image{
