--- a/customCSS/login.css
+++ b/customCSS/login.css
@@ -1,11 +1,22 @@
-body{
+.gradient-custom {
+    /* fallback for old browsers */
+    background: rgb(3, 22, 68);
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to top, rgba(3, 22, 68, 1), rgb(8, 44, 128));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to top, rgba(3, 22, 68, 1), rgba(8, 44, 128))
+    }
+
+/* body{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     background: #25355F;
-}
+} */
 
-.center{
+/* .center{
     text-align: center;
     width: 400px;
     height: 400x;
@@ -19,10 +30,10 @@ body{
     border-radius: 20px;
     border: 3px solid #031543;
   
-}
+} */
 
 
-.center h1{
+/* .center h1{
     text-align: center;
     margin: 25px auto;
     background: #D9D9D9;
@@ -30,10 +41,9 @@ body{
     color: #031543;
     font-weight:700;
     border-bottom: 3px solid #01081b;
-    
-}
+} */
 
-.center input[type = "text"]{
+/* .center input[type = "text"]{
     position: relative; 
     text-align: center;
     color: #031543;
@@ -60,15 +70,15 @@ body{
     border-radius: 20px;
     border: 3px solid #031543;
    
-}
+} */
 
-::placeholder{
+/* ::placeholder{
     color:#031543;
     font-weight: 600;
-}
+} */
 
 
-button{
+/* button{
     font-size: 16px;
     text-align: center;
     margin: 25px auto;
@@ -80,16 +90,14 @@ button{
     font-weight:600;
     border: 3px solid #0c0000;
     cursor: pointer;
+} */
 
-
-}
-
-label {
+/* label {
     color:#031543;
     font-weight: 600;
 }
 
 .center input[type = "radio"]{
     cursor:pointer; 
-}
+} */
 
