--- a/customCSS/index.css
+++ b/customCSS/index.css
@@ -14,7 +14,7 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font: size 17px;
     line-height: 1.6;
-    color:#395a92;
+    color:rgb(8, 44, 128);
   }
 
   #welcome-page{
