--- a/customCSS/MainStudentStyle.css
+++ b/customCSS/MainStudentStyle.css
@@ -1,9 +1,9 @@
-html{
+/* html{
     background-color: #25355F;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     vertical-align: center;
-}
+} */
 
 th, tr, td{
     border: 1px solid;
