--- a/customCSS/NavStyle.css
+++ b/customCSS/NavStyle.css
@@ -1,4 +1,4 @@
-ul {
+/* ul {
     list-style-type: none;
     margin: 0;
     margin-left: -9px;
@@ -9,13 +9,13 @@ ul {
     position: fixed;
     top: 0;
     width: 100%;
-}
+} */
 
-li {
+/* li {
     float: left;
-}
+} */
 
-li a {
+/* li a {
     display: block;
     color: white;
     text-align: center;
@@ -29,4 +29,4 @@ li a:hover:not(.active) {
 
 .active {
     background-color: #9c8b6d;
-}
+} */
