--- a/customCSS/MainTeacher.css
+++ b/customCSS/MainTeacher.css
@@ -33,8 +33,7 @@ header{
     color: #000000;
     font-style: bold;
     background-color: white;
-    border-radius: 20px;
-  
+    border-radius: 10px;
 }
 
 #addButton{
@@ -55,15 +54,17 @@ header{
     
 }
 
-
 h1{
+    margin-left: auto;
+    margin-right: auto;
+    width: 16em;
     vertical-align: center;
-    width: 100%;
+    /* width: 60%; */
     color: #000000;
     font-style: bold;
-    background-color: #C0C0C0;
+    background-color: #e2e1e1;
     border-radius: 20px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.164);
 }
 
 #assignGrades{
@@ -82,9 +83,11 @@ h1{
 }
 
 h2{
-    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
     background-color: white;
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 
 #studentsSec{
