--- a/customCSS/SeeTotals.css
+++ b/customCSS/SeeTotals.css
@@ -5,20 +5,20 @@ html{
 .gradesBox{
     text-align: center;
     align-items: center;
-    background-color:  #C0C0C0;
+    background-color: #25355F;
     margin-right: 300px;
     margin-left: 300px;
     border-radius: 20px;
     border-width: 300px;
-    border-bottom: 1px solid black;
- 
+   
+   
 
 }
 
 #gradesTable{
     text-align: center;
     align-items: center;
-    background-color:   white;
+    background-color:  white;
     margin-left: 80px;
     width: 85%;
     height: 175px;
@@ -30,18 +30,31 @@ html{
     text-align: center;
     align-items: center;
     margin-top: 200px;
-    background-color:    white;
+    background-color:white;
     padding: 7px;
     border-radius: 80px;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
 }
 
-th,tr,td,table{
-    background-color:  white;
+th,tr,td{
+    background-color:white;
     border-collapse: collapse;
-    border-style: outset;
+    border-style: ridge;
     margin:50px;
-    padding: 4px;
+    padding: 9px;
+    border: 1px solid black;
+  
+    
+}
+
+table{
+    background-color:#25355F;
+    border-collapse: collapse;
+    border-style: ridge;
+    margin:50px;
+    padding: 9px;
+    border: 1px solid black;
+    border-radius: 16px solid black;
   
     
 }
