--- a/customCSS/AsseStudentStyle.css
+++ b/customCSS/AsseStudentStyle.css
@@ -3,4 +3,25 @@ html{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     vertical-align: center;
+    padding: 20px;
+}
+
+th, tr, td {
+    border: 1px solid;
+    text-align: center;
+    vertical-align: center;
+    border-collapse: separate;
+    background-color: white;
+    border-radius: 8px;
+    padding: 3px;
+    margin: 25px;
+}
+
+table{
+    width: 100%;
+    border-spacing: 15px;
+}
+
+th{
+    background-color: #C0C0C0;
 }
