--- a/customCSS/MainStudentStyle.css
+++ b/customCSS/MainStudentStyle.css
@@ -1,17 +1,21 @@
-/* html{
+html{
     background-color: #25355F;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     vertical-align: center;
-} */
+}
+
 
 th, tr, td{
     border: 1px solid;
     text-align: center;
     vertical-align: center;
-    /*border-collapse: collapse;*/
+    border-collapse: collapse;
     background-color: white;
     border-radius: 8px;
+    padding:3px;
+    margin:25px;
+
 }
 
 th{
@@ -20,10 +24,31 @@ th{
 
 table{
     width: 100%;
+    border-spacing: 15px;
 }
 
 header{
+    vertical-align: center;
     width: 100%;
+    color: #000000;
+    font-style: bold;
     background-color: white;
     border-radius: 10px;
 }
+
+h1{
+    margin-left: auto;
+    margin-right: auto;
+    width: 16em;
+    vertical-align: center;
+    /* width: 60%; */
+    color: #000000;
+    font-style: bold;
+    background-color: #e2e1e1;
+    border-radius: 20px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.164);
+}
+
+
+
+
