--- a/soenfinalproject/customCSS/index.css
+++ b/soenfinalproject/customCSS/index.css
@@ -3,19 +3,10 @@
   padding:0;
 }
 
-/*This doesn't work yet. Need to figure out how to use custom fonts*/
 @font-face {
-  font-family: Inter;
-  src: url(https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap);
+  font-family: 'Source Sans Pro';
+  src: url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:wght@300;700&display=swap);
 }
-
-body {
-    margin: 0;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font: size 17px;
-    line-height: 1.6;
-    color:rgb(8, 44, 128);
-  }
 
   #welcome-page{
     position: relative;
@@ -26,6 +17,9 @@ body {
     align-items: center;
     justify-content: center;
     padding:0px;
+    margin: 0;
+    font-size: 200px;
+    color:rgb(8, 44, 128);
   }
 
   .bg-image{
@@ -41,22 +35,14 @@ body {
   }
 
   #welcome-page h1{
-    font-size:50px;
     text-align:left;
+    font-size:55px;
     line-height: 1.2;
+    font-family: 'Source Sans Pro';
   }
 
   #welcome-page h2{
-    font-size:30px;
+    font-size:40px !important;
     text-align:left;
-  }
-
-  #welcome-page .button{
-    font-size:18px;
-    text-decoration: none;
-    color:#395a92;
-    border: #395a92 1px solid;
-    padding:10px 20px;
-    margin: 10px;
-    border-radius:15px;
+    font-family: 'Source Sans Pro';
   }
